--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
-#content {
+#body {
     text-align: center;
+}
+
+#content {
+    margin-top: 100px;
+}
+
+#time {
+    font-size: 150px;
+}
+
+button {
+    height: 50px;
+    width: 90px;
+    border-radius: 4px;
+    border: 2px solid black;
 }
