--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,11 @@ button {
   margin: 10px;
 }
 
-button {
-  height: 30px;
-  width: 90px;
-  border-radius: 4px;
-  border: 2px solid black;
-  margin: 10px;
+#start {
   background-color: lime;
+}
+
+#reset {
+  background-color: grey;
 }
 /*# sourceMappingURL=style.css.map */
