--- a/css/style.scss
+++ b/css/style.scss
@@ -25,11 +25,10 @@ button {
     margin: 10px;
 }
 
-button {
-    height: 30px;
-    width: 90px;
-    border-radius: 4px;
-    border: 2px solid black;
-    margin: 10px;
+#start {
     background-color: lime;
+}
+
+#reset {
+    background-color: grey;
 }
