--- a/css/style.scss
+++ b/css/style.scss
@@ -12,6 +12,14 @@
     margin-top: 100px;
 }
 
+#number {
+    font-family: 'Poppins', sans-serif;
+}
+
+#random {
+    font-size: 20px;
+}
+
 #time {
     font-size: 130px;
     font-family: 'Poppins', sans-serif;
