--- a/css/style.scss
+++ b/css/style.scss
@@ -10,11 +10,15 @@
 }
 
 #content {
-    margin-top: 100px;
+    margin-top: 75px;
 }
 
-#random {
+#roundCount, #random {
     font-size: 20px;
+}
+
+#targetTime, #stoppedTime, #difference, #best {
+    font-size: 18px;
 }
 
 #time {
@@ -27,6 +31,10 @@ button {
     border-radius: 4px;
     border: 2px solid black;
     margin: 10px;
+}
+
+button:focus {
+    outline:0;
 }
 
 #start {
