Added 'aside' tag for current score, may rearrange elements

--- a/css/style.scss
+++ b/css/style.scss
@@ -9,6 +9,13 @@
     text-align: center;
 }
 
+aside {
+    font-size: 20px;
+    padding: 20px;
+    float: left;
+    position: absolute;
+}
+
 #content {
     margin-top: 75px;
 }
