--- a/css/style.scss
+++ b/css/style.scss
@@ -15,10 +15,15 @@ aside {
     float: left;
     position: absolute;
     left: 75px;
+    margin: 10px;
 }
 
 #scoreOverTotal {
     font-size: 50px;
+}
+
+#addition {
+    font-size: 20px;
 }
 
 #content {
